--- a/catalog.html
+++ b/catalog.html
@@ -122,8 +122,8 @@
                   </li>
                 </ul>
               </fieldset>
-              <button class="button" type="submit">Применить</button>
-              <button class="button" type="reset">Сбросить</button>
+              <button class="button-catalog-filter" type="submit">Применить</button>
+              <button class="button-catalog-filter" type="reset">Сбросить</button>
             </form>
           </div>
         </section>
@@ -268,7 +268,7 @@
             <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
             <form class="subscription-form" action="https://echo.htmlacademy.ru/" method="post">
               <label for="subscription-email"></label>
-              <input class="field" placeholder="Ваш e-mail" type="email" name="subscription-email"
+              <input class="field active-pagination" placeholder="Ваш e-mail" type="email" name="subscription-email"
                 id="subscription-email" required>
               <button class="button-subscription-button" type="submit">Подписаться</button>
             </form>
