--- a/catalog.html
+++ b/catalog.html
@@ -122,8 +122,8 @@
                   </li>
                 </ul>
               </fieldset>
-              <button class="button-catalog-filter" type="submit">Применить</button>
-              <button class="button-catalog-filter" type="reset">Сбросить</button>
+              <button class="button-catalog-filter button-submit" type="submit">Применить</button>
+              <button class="button-catalog-filter button-reset " type="reset">Сбросить</button>
             </form>
           </div>
         </section>
