--- a/catalog.html
+++ b/catalog.html
@@ -122,8 +122,10 @@
                   </li>
                 </ul>
               </fieldset>
-              <button class="button-catalog-filter button-submit" type="submit">Применить</button>
-              <button class="button-catalog-filter button-reset " type="reset">Сбросить</button>
+              <div class="button-container-filter">
+                <button class="button-catalog-filter button-submit" type="submit">Применить</button>
+                <button class="button-catalog-filter button-reset " type="reset">Сбросить</button>
+              </div>
             </form>
           </div>
         </section>
