--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 </a>
               </li>
               <li class="menu-item">
-                <a class="menu-button" href="#">Хочу сюда!</a>
+                <a class="menu-button button-state" href="#">Хочу сюда!</a>
               </li>
             </ul>
           </nav>
@@ -143,7 +143,7 @@
           <p>Укажите предполагаемые даты поездки,
             <br>и мы покажем вам лучшие предложения гостиниц в Седоне
           </p>
-          <a class="search-hotel-button" href="#">Поиск гостиницы в Седоне</a>
+          <a class="search-hotel-button button-state" href="#">Поиск гостиницы в Седоне</a>
         </div>
         <section class="subscription">
           <div class="subscription-container">
@@ -153,7 +153,7 @@
               <label for="subscription-email"></label>
               <input class="field" placeholder="Ваш e-mail" type="email" name="subscription-email"
                 id="subscription-email" required>
-              <button class="button-subscription-button" type="submit">Подписаться</button>
+              <button class="button-subscription-button button-state" type="submit">Подписаться</button>
             </form>
           </div>
         </section>
