--- a/8/catalog.html
+++ b/8/catalog.html
@@ -50,7 +50,7 @@
                 </a>
               </li>
               <li class="menu-item">
-                <a class="menu-button" href="#">Хочу сюда!</a>
+                <a class="menu-button button-state" href="#">Хочу сюда!</a>
               </li>
             </ul>
           </nav>
@@ -124,21 +124,21 @@
                 </ul>
               </fieldset>
               <div class="button-container-filter">
-                <button class="button-catalog-filter button-submit" type="submit">Применить</button>
-                <button class="button-catalog-filter button-reset " type="reset">Сбросить</button>
+                <button class="button-catalog-filter button-submit button-state" type="submit">Применить</button>
+                <button class="button-catalog-filter button-reset button-state " type="reset">Сбросить</button>
               </div>
             </form>
           </div>
         </section>
         <div class="select-container">
           <p class="page-search">Найдено гостиниц: <span>38</span></p>
-          <select class="select-control" aria-label="Сортировка">
+          <select class="select-control border-state" aria-label="Сортировка">
             <option value="cheap">Сначала дешёвые</option>
             <option value="expensive">Сначала дорогие</option>
             <option value="rating">По рейтингу</option>
           </select>
           <div class="button-filter-container">
-            <a href="#" class="button-filter button-filter-active">
+            <a href="#" class="button-filter button-filter-state">
               <svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="16" height="14"
                 fill="none">
                 <g fill="#000" clip-path="url(#a)">
@@ -152,7 +152,7 @@
               </svg>
               <span class="visually-hidden">Показать карточки</span>
             </a>
-            <a href="#" class="button-filter">
+            <a href="#" class="button-filter button-filter-state">
               <svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="16" height="14"
                 fill="none">
                 <g fill="#000" clip-path="url(#a)">
@@ -166,7 +166,7 @@
               </svg>
               <span class="visually-hidden">Показать карточку</span>
             </a>
-            <a href="#" class="button-filter">
+            <a href="#" class="button-filter button-filter-state">
               <svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="16" height="14"
                 fill="none">
                 <g fill="#000" clip-path="url(#a)">
@@ -191,8 +191,8 @@
             </a>
             <p>Гостиница</p>
             <span class="product-card-price">От 4000 ₽</span>
-            <a class="product-card-button" href="#">Подробнее</a>
-            <a class="product-card-button-favorites" href="#">В избранноe</a>
+            <a class="product-card-button button-state" href="#">Подробнее</a>
+            <a class="product-card-button-favorites button-state" href="#">В избранноe</a>
             <div class="stars"><svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="18"
                 height="17" fill="none" viewBox="0 0 18 17">
                 <path fill="#83B3D3" d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" />
@@ -206,8 +206,8 @@
             </a>
             <p>Гостиница</p>
             <span class="product-card-price">От 5000 ₽</span>
-            <a class="product-card-button" href="#">Подробнее</a>
-            <a class="product-card-button-favorites button-favorites-active" href="#">В избранноe</a>
+            <a class="product-card-button button-state" href="#">Подробнее</a>
+            <a class="product-card-button-favorites button-state" href="#">В избранноe</a>
             <div class="stars"><svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="18"
                 height="17" fill="none" viewBox="0 0 18 17">
                 <path fill="#83B3D3" d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" />
@@ -221,8 +221,8 @@
             </a>
             <p>Гостиница</p>
             <span class="product-card-price">От 2500 ₽</span>
-            <a class="product-card-button" href="#">Подробнее</a>
-            <a class="product-card-button-favorites" href="#">В избранноe</a>
+            <a class="product-card-button button-state" href="#">Подробнее</a>
+            <a class="product-card-button-favorites button-state" href="#">В избранноe</a>
             <div class="stars"><svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="18"
                 height="17" fill="none" viewBox="0 0 18 17">
                 <path fill="#83B3D3" d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" />
@@ -236,8 +236,8 @@
             </a>
             <p>Гостиница</p>
             <span class="product-card-price">От 1500 ₽</span>
-            <a class="product-card-button" href="#">Подробнее</a>
-            <a class="product-card-button-favorites" href="#">В избранноe</a>
+            <a class="product-card-button button-state" href="#">Подробнее</a>
+            <a class="product-card-button-favorites button-state" href="#">В избранноe</a>
             <div class="stars"><svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="18"
                 height="17" fill="none" viewBox="0 0 18 17">
                 <path fill="#83B3D3" d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" />
@@ -247,7 +247,7 @@
         </ul>
         <ul class="pagination">
           <li class="pagination-item">
-            <a class="pagination-link active-pagination" href="catalog.html">1</a>
+            <a class="pagination-link > href="catalog.html">1</a>
           </li>
           <li class="pagination-item">
             <a class="pagination-link" href="#">2</a>
@@ -273,7 +273,7 @@
               <label for="subscription-email"></label>
               <input class="field active-pagination" placeholder="Ваш e-mail" type="email" name="subscription-email"
                 id="subscription-email" required>
-              <button class="button-subscription-button" type="submit">Подписаться</button>
+              <button class="button-subscription-button button-state" type="submit">Подписаться</button>
             </form>
           </div>
         </section>
