--- a/catalog.html
+++ b/catalog.html
@@ -123,8 +123,8 @@
                 </ul>
               </fieldset>
               <div class="button-container-filter">
-                <button class="button-catalog-filter button-submit button-state" type="submit">Применить</button>
-                <button class="button-catalog-filter button-reset button-state " type="reset">Сбросить</button>
+                <button class="button-catalog-filter button-submit "  type="submit">Применить</button>
+                <button class="button-catalog-filter button-reset"  type="reset">Сбросить</button>
               </div>
             </form>
           </div>
