--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
           </a>
           <nav class="navigation">
             <ul class="site-navigation">
-              <li class="site-navigation-item active">
-                <a class="navigation-link" href="index.html">Главная</a>
+              <li class="site-navigation-item">
+                <a class="navigation-link active-link" href="index.html">Главная</a>
               </li>
               <li class="site-navigation-item">
                 <a class="navigation-link" href="about.html"> О седоне</a>
