--- a/index.html
+++ b/index.html
@@ -108,11 +108,11 @@
               <h3>Жилье</h3>
               <p>Рекомендуем пожить в настоящем мотеле,всё как в кино!</p>
             </li>
-            <li class="services-item">
+            <li class="services-item services-item-food">
               <h3>Еда</h3>
               <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
             </li>
-            <li class="services-item ">
+            <li class="services-item services-item-souvenirs ">
               <h3>Сувениры</h3>
               <p>Не только китайского,но и настоящего местного производства!</p>
             </li>
