--- a/catalog.html
+++ b/catalog.html
@@ -191,7 +191,7 @@
             <p>Гостиница</p>
             <span class="product-card-price">От 4000 ₽</span>
             <a class="product-card-button button-state" href="#">Подробнее</a>
-            <a class="product-card-button-favorites button-state" href="#">В избранноe</a>
+            <a class="product-card-button-favorites" href="#">В избранноe</a>
             <div class="stars"><svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="18"
                 height="17" fill="none" viewBox="0 0 18 17">
                 <path fill="#83B3D3" d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" />
@@ -205,8 +205,8 @@
             </a>
             <p>Гостиница</p>
             <span class="product-card-price">От 5000 ₽</span>
-            <a class="product-card-button button-state" href="#">Подробнее</a>
-            <a class="product-card-button-favorites button-state" href="#">В избранноe</a>
+            <a class="product-card-button" href="#">Подробнее</a>
+            <a class="product-card-button-favorites " href="#">В избранноe</a>
             <div class="stars"><svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="18"
                 height="17" fill="none" viewBox="0 0 18 17">
                 <path fill="#83B3D3" d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" />
@@ -220,8 +220,8 @@
             </a>
             <p>Гостиница</p>
             <span class="product-card-price">От 2500 ₽</span>
-            <a class="product-card-button button-state" href="#">Подробнее</a>
-            <a class="product-card-button-favorites button-state" href="#">В избранноe</a>
+            <a class="product-card-button" href="#">Подробнее</a>
+            <a class="product-card-button-favorites" href="#">В избранноe</a>
             <div class="stars"><svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="18"
                 height="17" fill="none" viewBox="0 0 18 17">
                 <path fill="#83B3D3" d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" />
@@ -235,8 +235,8 @@
             </a>
             <p>Гостиница</p>
             <span class="product-card-price">От 1500 ₽</span>
-            <a class="product-card-button button-state" href="#">Подробнее</a>
-            <a class="product-card-button-favorites button-state" href="#">В избранноe</a>
+            <a class="product-card-button" href="#">Подробнее</a>
+            <a class="product-card-button-favorites" href="#">В избранноe</a>
             <div class="stars"><svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="18"
                 height="17" fill="none" viewBox="0 0 18 17">
                 <path fill="#83B3D3" d="m9 0 2.1 6.5H18l-5.6 4 2.2 6.5L9 13l-5.6 4 2.2-6.5-5.6-4h6.9L9 0Z" />
