--- a/catalog.html
+++ b/catalog.html
@@ -137,7 +137,7 @@
             <option value="rating">По рейтингу</option>
           </select>
           <div class="button-filter-container">
-            <a href="#" class="button-filter button-filter-state">
+            <a href="#" class="button-filter">
               <svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="16" height="14"
                 fill="none">
                 <g fill="#000" clip-path="url(#a)">
@@ -151,7 +151,7 @@
               </svg>
               <span class="visually-hidden">Показать карточки</span>
             </a>
-            <a href="#" class="button-filter button-filter-state">
+            <a href="#" class="button-filter">
               <svg aria-hidden="true" focusable="false" xmlns="http://www.w3.org/2000/svg" width="16" height="14"
                 fill="none">
                 <g fill="#000" clip-path="url(#a)">
