--- a/catalog.html
+++ b/catalog.html
@@ -80,7 +80,8 @@
                 <ul class="catalog-filter-list">
                   <li class="catalog-filter-item">
                     <label class="control">
-                      <input class="control-input" type="checkbox" name="swimming pool" checked>
+                      <input class="control-input visually-hidden" type="checkbox" name="swimming pool" checked>
+                      <span class="control-mark-square"></span>
                       <span class="control-label">
                         Бассейн
                       </span>
@@ -88,7 +89,8 @@
                   </li>
                   <li class="catalog-filter-item">
                     <label class="control">
-                      <input class="control-input" type="checkbox" name="parking" checked>
+                      <input class="control-input visually-hidden" type="checkbox" name="parking" checked>
+                      <span class="control-mark-square"></span>
                       <span class="control-label">
                         Парковка
                       </span>
@@ -96,7 +98,8 @@
                   </li>
                   <li class="catalog-filter-item">
                     <label class="control">
-                      <input class="control-input" type="checkbox" name="Wi-Fi">
+                      <input class="control-input visually-hidden" type="checkbox" name="Wi-Fi">
+                      <span class="control-mark-square"></span>
                       <span class="control-label">
                         Wi-Fi
                       </span>
@@ -109,7 +112,8 @@
                 <ul class="catalog-filter-list">
                   <li class="catalog-filter-item">
                     <label class="control">
-                      <input class="control-input" type="radio" name="product-group" checked>
+                      <input class="control-input visually-hidden" type="radio" name="product-group" checked>
+                      <span class="control-mark-circle"></span>
                       <span class="control-label">
                         Гостиница
                       </span>
@@ -117,7 +121,8 @@
                   </li>
                   <li class="catalog-filter-item">
                     <label class="control">
-                      <input class="control-input" type="radio" name="product-group">
+                      <input class="control-input visually-hidden" type="radio" name="product-group">
+                      <span class="control-mark-circle"></span>
                       <span class="control-label">
                         Мотель
                       </span>
@@ -125,7 +130,8 @@
                   </li>
                   <li class="catalog-filter-item">
                     <label class="control">
-                      <input class="control-input" type="radio" name="product-group">
+                      <input class="control-input visually-hidden" type="radio" name="product-group">
+                      <span class="control-mark-circle"></span>
                       <span class="control-label">
                         Апартаменты
                       </span>
