--- a/index.html
+++ b/index.html
@@ -189,8 +189,20 @@
       </button>
       <section class="modal-content">
         <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
+
+        <form class="date-form" action="https://echo.htmlacademy.ru/" method="post">
+          <p class="field-group">
+            <label class="" for="arrival-date">Дата Заезда</label>
+            <input class="" type="date" id="arrival-date" name="arrival-date" placeholder="Логин">
+          </p>
+          <p class="field-group">
+            <label class="" for="date-of-departure">Дата Выезда</label>
+            <input class="" type="date" id="date-of-departure" name="date-of-departure" placeholder="Пароль">
+          </p>
+        </form>
       </section>
 
+      <a class="modal-container-button">Найти</a>
     </div>
   </body>
 
