--- a/index.html
+++ b/index.html
@@ -205,15 +205,15 @@
                 <input class="modal-form-text form-number" type="number" id="grown-ups" name="grown-ups" placeholder="">
               </p>
               <p class="quantity-group">
-                <span class="form-label">
-                <label class="modal-form-title " for="children">Дети:</label>
+                <span class="form-label form-label-icon">
+                <label class="modal-form-title " for="children">Дети: Дети: Дети:</label>
                 <span class="tooltip ">
-                  <button class="tooltip-toggle" type="button">
+                  <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-label-date">
                     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" viewBox="0 0 20 20">
                       <path fill="#fff" fill-rule="evenodd" d="M9 4h2v2H9V4Zm2 12H9V7h2v9Z" clip-rule="evenodd" />
                     </svg>
                   </button>
-                  <span class="tooltip-text">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18
+                  <span class="tooltip-text" role="tooltip" id="tooltip-label-date">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18
                     лет. Дети до 6 лет размещаются бесплатно.</span>
                 </span>
                 </span>
